--- a/layuiAdmin.pro-v1.2.1/src/views/user/user/list.html
+++ b/layuiAdmin.pro-v1.2.1/src/views/user/user/list.html
@@ -32,16 +32,16 @@
 <!--            <input type="text" name="email" placeholder="请输入" autocomplete="off" class="layui-input">-->
 <!--          </div>-->
 <!--        </div>-->
-        <div class="layui-inline">
-          <label class="layui-form-label">性别</label>
-          <div class="layui-input-block">
-            <select name="sex">
-              <option value="0">不限</option>
-              <option value="1">男</option>
-              <option value="2">女</option>
-            </select>
-          </div>
-        </div>
+<!--        <div class="layui-inline">-->
+<!--          <label class="layui-form-label">性别</label>-->
+<!--          <div class="layui-input-block">-->
+<!--            <select name="sex">-->
+<!--              <option value="0">不限</option>-->
+<!--              <option value="1">男</option>-->
+<!--              <option value="2">女</option>-->
+<!--            </select>-->
+<!--          </div>-->
+<!--        </div>-->
 
         <div class="layui-inline">
           <button class="layui-btn layuiadmin-btn-useradmin" lay-submit lay-filter="LAY-user-front-search">
@@ -133,6 +133,9 @@ layui.use('useradmin', layui.factory('useradmin')).use(['admin', 'useradmin', 't
               var field = data.field; //获取提交的字段
 
               //提交 Ajax 成功后，关闭当前弹层并重载表格
+
+
+
               //$.ajax({});
               layui.table.reload('LAY-user-manage'); //重载表格
               layer.close(index); //执行关闭 
