--- a/layuiAdmin.pro-v1.2.1/src/views/user/user/userform.html
+++ b/layuiAdmin.pro-v1.2.1/src/views/user/user/userform.html
@@ -25,24 +25,24 @@
 <!--      </script>-->
 <!--    </div>-->
 <!--  </div>-->
-  <div class="layui-form-item">
-    <label class="layui-form-label">头像</label>
-    <div class="layui-input-inline">
-      <script type="text/html" template>
-        <input type="text" name="avatar" value="{{ d.params.avatar || '' }}" lay-verify="required" placeholder="请上传图片" autocomplete="off" class="layui-input" >
-      </script>
-    </div>
-    <button style="float: left;" type="button" class="layui-btn" id="layuiadmin-upload-useradmin">上传图片</button> 
-  </div>
-  <div class="layui-form-item" lay-filter="sex">
-    <label class="layui-form-label">选择性别</label>
-    <div class="layui-input-block">
-      <script type="text/html" template>
-        <input type="radio" name="sex" value="男" title="男" {{ d.params.sex === '男' ? 'checked' : '' }}>
-        <input type="radio" name="sex" value="女" title="女" {{ d.params.sex === '女' ? 'checked' : '' }}>
-      </script>
-    </div>
-  </div>
+<!--  <div class="layui-form-item">-->
+<!--    <label class="layui-form-label">头像</label>-->
+<!--    <div class="layui-input-inline">-->
+<!--      <script type="text/html" template>-->
+<!--        <input type="text" name="avatar" value="{{ d.params.avatar || '' }}" lay-verify="required" placeholder="请上传图片" autocomplete="off" class="layui-input" >-->
+<!--      </script>-->
+<!--    </div>-->
+<!--    <button style="float: left;" type="button" class="layui-btn" id="layuiadmin-upload-useradmin">上传图片</button> -->
+<!--  </div>-->
+<!--  <div class="layui-form-item" lay-filter="sex">-->
+<!--    <label class="layui-form-label">选择性别</label>-->
+<!--    <div class="layui-input-block">-->
+<!--      <script type="text/html" template>-->
+<!--        <input type="radio" name="sex" value="男" title="男" {{ d.params.sex === '男' ? 'checked' : '' }}>-->
+<!--        <input type="radio" name="sex" value="女" title="女" {{ d.params.sex === '女' ? 'checked' : '' }}>-->
+<!--      </script>-->
+<!--    </div>-->
+<!--  </div>-->
   <div class="layui-form-item">
     <label class="layui-form-label"></label>
     <div class="layui-input-inline">
