--- a/layuiAdmin.pro-v1.2.1/src/views/user/user/userform.html
+++ b/layuiAdmin.pro-v1.2.1/src/views/user/user/userform.html
@@ -58,15 +58,15 @@ layui.use(['admin', 'form', 'upload'], function(){
   ,upload = layui.upload;
   
   //上传头像
-  upload.render({
-    elem: '#layuiadmin-upload-useradmin'
-    ,url: './json/upload/demo.js'
-    ,accept: 'images'
-    ,method: 'get'
-    ,acceptMime: 'image/*'
-    ,done: function(res){
-      $(this.item).prev("div").children("input").val(res.data.src)
-    }
-  });
+  // upload.render({
+  //   elem: '#layuiadmin-upload-useradmin'
+  //   ,url: './json/upload/demo.js'
+  //   ,accept: 'images'
+  //   ,method: 'get'
+  //   ,acceptMime: 'image/*'
+  //   ,done: function(res){
+  //     $(this.item).prev("div").children("input").val(res.data.src)
+  //   }
+  // });
 })
 </script>
